# otus-cpp

./: .gitignore
.github/workflows/: 1-release.yml  2-release.yml  3-release.yml  release.yml
1/: CMakeLists.txt  main.cpp  test_version.cpp
2/: CMakeLists.txt  ip.cc  ip.h  main.cc  test.cc
3/: CMakeLists.txt  allocator.h  container.h  invoker.h  main.cc  test.cc
3-acm/: 1264.cc  1409.cc  1787.cc  1877.cc  2001.cc
4-acm/: 1000.cc  1001.cc  1197.cc  1293.cc  1785.cc  1820.cc  1880.cc  1880_2.cc  2012.cc  2066.cc  2100.cc
